--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html ng-app="nlu">
 
 <head>
-    <title>NLU Engine</title>
+    <title>OAK</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
@@ -144,7 +144,7 @@
 
 
     </div>
-    <script src="/node_modules/socket.io-client/dist/socket.io.js"></script>
+   
 
     <script src="/assets/js/jquery.min.js" type="text/javascript"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
@@ -152,12 +152,11 @@
     <script src="/assets/js/material-kit.js"></script>
     <!-- <script src="/assets/index/js/paper-kit.js?v=2.0.1"></script> -->
 
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
+ 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
-    <script src="https://pc035860.github.io/angular-highlightjs/angular-highlightjs.min.js"></script>
+   
     <script src="/app/nlu.js"></script>
 
 </body>
