--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
                                 <table class="table table-hover table-bordered">
                                     <tr>
                                         <td>Overall Rating</td>
-                                        <td></td>
+                                        <td>{{movie_result.overall}}</td>
                                     </tr>
                                     <tr>
                                         <td>Positive Comment Count</td>
-                                        <td></td>
+                                        <td>{{movie_result.pos}}</td>
                                     </tr>
                                     <tr>
                                         <td>Negative Comment Count</td>
-                                        <td></td>
+                                        <td>{{movie_result.neg}}</td>
                                     </tr>
                                 </table>
 
